# localsend-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
localsend-lib/: Cargo.toml
localsend-lib/src/: error.rs  settings.rs
localsend-lib/src/receive/: receive_session.rs  receiving_file.rs
localsend-lib/src/scanner/: multicast.rs
localsend-lib/src/send/: send_file.rs  send_session.rs
localsend-lib/src/server/: controller.rs  error.rs  mod.rs
localsend-lib/src/util/: device.rs
localsend-proto/: Cargo.toml
localsend-proto/src/: constants.rs  route.rs
localsend-proto/src/dto/: file_dto.rs  multicast_dto.rs  prepare_upload_dto.rs  protocol_type.rs  register_dto.rs
src/: lib.rs  main.rs  ui.rs
src/localsend_lib/: error.rs  mod.rs
src/localsend_lib/receive/: receive_session.rs  receiving_file.rs
src/localsend_lib/scanner/: mod.rs  multicast.rs
src/localsend_lib/send/: send_file.rs  send_session.rs
src/localsend_lib/server/: controller.rs  error.rs  mod.rs
src/localsend_lib/util/: device.rs
src/localsend_proto/: constants.rs  device.rs  mod.rs  route.rs
src/localsend_proto/dto/: multicast_dto.rs  register_dto.rs
