[package]
name = "localsend-rs"
version = "0.2.13"
edition = "2024"
authors = ["zpp0196 <zpp0196@gmail.com>", "github.com/pepa65"]
description = "CLI implementation of localsend"
repository = "https://github.com/pepa65/localsend-rs"
license = "MIT"

[[bin]]
name = "localsend"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
clap = { version = "4.4.18", features = ["derive", "env"] }
colored = "3"
comfy-table = "7.1.0"
ctrlc = "3.4.2"
humansize = "2.1.3"
indicatif = "0.18"
inquire = "0.7"
itertools = "0.14"
localsend-lib = { path = "localsend-lib" }
localsend-proto = { path = "localsend-proto" }
log = "0.4.20"
simple_logger = "5"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }

[workspace]
members = ["localsend-lib", "localsend-proto"]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = 'symbols'
